# ip-story

./: Cargo.toml  Makefile.toml  README.md  Rocket.toml
backend/: Cargo.toml  build.rs
backend/src/: api.rs  main.rs
frontend/: eslint.config.ts  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  api.ts  router.ts  style.css
frontend/src/components/icons/: IconSwagger.vue
frontend/src/types/: swagger-ui-dist.d.ts
frontend/src/views/: HomeView.vue  NotFoundView.vue  OpenApiView.vue  PageView.vue
src/: main.rs
